RESOLVED FIXED15504
Fix crashers in SVGViewSpec::parseViewSpec
https://bugs.webkit.org/show_bug.cgi?id=15504
Summary Fix crashers in SVGViewSpec::parseViewSpec
Eric Seidel (no email)
Reported 2007-10-14 02:06:11 PDT
Fix crashers in SVGViewSpec::parseViewSpec I'm also including the idl for SVGViewSpec as well as a tiny change in the JS bindings generator (it didn't handle multi-parent classes where all parents are just interfaces... which will eventually be needed by SVGViewSpec.idl for generation). There are other bugs yet to resolve before we can turn on SVGViewSpec generation however.
Attachments
fix for crashers (and includes missing idl file) (7.85 KB, patch)
2007-10-14 02:09 PDT, Eric Seidel (no email)
mjs: review+
Eric Seidel (no email)
Comment 1 2007-10-14 02:06:51 PDT
Unfortunately enabling the layout test I built for this is blocked by bug 15503.
Eric Seidel (no email)
Comment 2 2007-10-14 02:09:05 PDT
Created attachment 16664 [details] fix for crashers (and includes missing idl file)
Maciej Stachowiak
Comment 3 2007-10-14 13:20:54 PDT
Comment on attachment 16664 [details] fix for crashers (and includes missing idl file) This looks ok, but as discussed let's find an alternate way to make the test work, or at least land it disabled and/or as a manual test.
Eric Seidel (no email)
Comment 4 2007-10-18 00:40:46 PDT
One more set of repro crashers down! r26740
Note You need to log in before you can comment on or make changes to this bug.