2007-10-18  Eric Seidel  <eric@webkit.org>

Reviewed by Maciej.

        Fix crashers in SVGViewSpec::parseViewSpec
        http://bugs.webkit.org/show_bug.cgi?id=15504

        Test is blocked by bug 15503, landed as:
        * svg/dom/viewspec-parser.html-disabled

        * bindings/scripts/CodeGeneratorObjC.pm: support classes where all parents are interfaces
        * ksvg2/svg/SVGViewSpec.cpp:
        (WebCore::SVGViewSpec::parseViewSpec):
        * ksvg2/svg/SVGViewSpec.idl: Added.


Canonical link: https://commits.webkit.org/20688@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26740 268f45cc-cd09-0410-ab3c-d52691b4dbfc