LayoutTests/fast/js/resources/js-test-post.js
@@ -1,2 +1,2 @@
 shouldBeTrue("successfullyParsed");
-debug('<br><span class="pass">TEST COMPLETE</span>');
+debug('<br /><span class="pass">TEST COMPLETE</span>');
